relationships and db
